<resources>
    <string name="manage_voucher">QUẢN LÝ MÃ GIẢM GIÁ</string>
    <string name="app_name">QUẢN LÝ MÃ GIẢM GIÁ</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Mật Khẩu</string>
    <string name="re_password">Re-type Password</string>
    <string name="login">LOGIN</string>
    <string name="already_account">Already have an account?</string>
    // Trang admin
    <string name="menu">Menu</string>
    <string name="avatar">Avatar</string>
    <string name="logo">MEDDU</string>
    <string name="dashboard">Tổng quan</string>
    <string name="manage_info">Quản lý thông tin</string>
    <string name="voucher">Mã giảm giá</string>
    <string name="history">Lịch sử đặt lịch</string>
    <string name="user">User</string>
    <string name="descriptionLogo">logo</string>
    <string name="logOut">Đăng xuất</string>
    <string name="back_to_login">Back to login</string>
    <string name="adminManagement">Quản lý Admin</string>
    <string name="serviceName">Tên dịch vụ</string>
    <string name="serviceDescription">Mô tả ngắn gọn về dịch vụ này...</string>
    <string name="back">Back</string>
    <string name="serviceManagement">Quản lý Dịch vụ</string>
    <string name="repair_history">Lịch sử sửa xe</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="address">Địa chỉ</string>


    // End Trang Admin
</resources>