<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <!-- ================= MAIN ================= -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- HEADER -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#2196F3"
            android:padding="10dp">

            <!-- MENU -->
            <ImageView
                android:id="@+id/btnMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu"
                android:contentDescription="@string/menu" />

            <!-- LOGO -->
            <TextView
                android:id="@+id/txtLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_centerInParent="true" />

            <!-- USER -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@android:drawable/sym_def_app_icon"
                    android:contentDescription="@string/avatar" />

                <TextView
                    android:id="@+id/txtUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="5dp" />
            </LinearLayout>

        </RelativeLayout>

        <!-- CONTENT -->
        <FrameLayout
            android:id="@+id/frameContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- ================= SIDEBAR ================= -->
    <LinearLayout
        android:id="@+id/sidebar"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#2C2C2C"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- LOGO + TÊN ADMIN -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp">

            <!-- LOGO -->
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/descriptionLogo"/>

            <!-- TÊN -->
            <TextView
                android:id="@+id/txtUserSidebar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_marginStart="12dp"/>
        </LinearLayout>

        <!-- LINE -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#555"
            android:layout_marginBottom="10dp"/>

        <!-- MENU -->
        <TextView
            android:id="@+id/menuDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="#FFFFFF"
            android:padding="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>

        <TextView
            android:id="@+id/menuInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_info"
            android:textColor="#FFFFFF"
            android:padding="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>

        <TextView
            android:id="@+id/menuVoucher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voucher"
            android:textColor="#FFFFFF"
            android:padding="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>

        <TextView
            android:id="@+id/menuHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textColor="#FFFFFF"
            android:padding="12dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>
        <TextView
            android:id="@+id/repair_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repair_history"
            android:textColor="#FFFFFF"
            android:padding="12dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>
        <TextView
            android:id="@+id/service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serviceManagement"
            android:textColor="#FFFFFF"
            android:padding="12dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>
        <TextView
            android:id="@+id/menuLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logOut"
            android:textColor="#FF5252"
            android:padding="12dp"/>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>